@@ -26,6 +26,9 @@ first_version = 0.0.1
 
 [AutoPrereqs]
 
+[Prereqs]
+MooseX::Traits::Pluggable = 0.10
+
 [Prereqs / TestRequires]
 Catalyst::Plugin::ConfigLoader = 0
 Config::General = 0
